# e-commerce

./: .gitignore  LICENSE  docker-compose.yaml
productService/: Dockerfile  main.py  pyproject.toml
productService/db/: sessions.py
productService/db/tables/: base_class.py  products.py
productService/domain/repository/: product_repository.py
productService/infraestructure/schemas/: products.py
services/inventoryService/: .env.example  Dockerfile  main.py  pyproject.toml
services/inventoryService/app/: main.py
services/inventoryService/app/protobuf/: inventory.proto
services/inventoryService/application/models/: product.py
services/inventoryService/application/schemas/: base.py  product.py
services/inventoryService/core/: config.py
services/inventoryService/domain/services/: product_service.py
services/inventoryService/infra-scripts/: ggen
services/inventoryService/infraestructure/repository/: product_repository.py
services/productService/: .dockerignore  .env.example
services/productService/core/: config.py
services/shoppingCartService/: .env.example  main.py
services/shoppingCartService/db/tables/: base_class.py  products.py
services/shoppingCartService/domain/repository/: cart_repository.py  product_repository.py
services/shoppingCartService/domain/services/: cart_item_service.py
services/shoppingCartService/infraestructure/schemas/: cart_items.py
shoppingCartService/: Dockerfile  main.py  pyproject.toml
shoppingCartService/db/: sessions.py
shoppingCartService/db/tables/: cart_item.py  cart_items.py  carts.py
shoppingCartService/domain/repository/: cart_item_repository.py  cart_repository.py  product_repository.py
shoppingCartService/infraestructure/dependencies/: db.py  repository.py
shoppingCartService/infraestructure/schemas/: carts.py
