[tool.poetry]
name = "shoppingcartservice"
version = "0.1.0"
description = "Administers the interaction between users and their shopping carts."
authors = ["Enrique Torres"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlmodel = "^0.0.14"
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
python-dotenv = "^1.0.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
fastapi = "^0.108.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
