[tool.poetry]
name = "inventoryservice"
version = "0.1.0"
description = "managing and providing information about the inventory of products"
authors = ["Enrique Torres"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
grpcio = "^1.60.0"
sqlalchemy = "^2.0.25"
grpcio-tools = "^1.60.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
